input spacing fix

--- a/Dashboard V1.3/assets/css/sign-up-responsive.css
+++ b/Dashboard V1.3/assets/css/sign-up-responsive.css
@@ -18,6 +18,10 @@
         width: 90%;
     }
 
+    input{
+        margin-bottom: 0.5em;
+    }
+
     .sign-up-img{
         display: none;
     }
